Bug 25787 - inetd/auth: -i option to return uid instead of uname
Summary: inetd/auth: -i option to return uid instead of uname
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 4.2-STABLE
Hardware: Any Any
: Normal Affects Only Me
Assignee: dwmalone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2001-03-14 03:10 UTC by Arne Dag Fidjestøl
Modified: 2001-07-17 11:45 UTC (History)
0 users

See Also:


Attachments
file.diff (4.33 KB, patch)
2001-03-14 03:10 UTC, Arne Dag Fidjestøl
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Arne Dag Fidjestøl 2001-03-14 03:10:01 UTC
	The enclosed patch adds an -i option to the auth-service in inetd,
which  makes it possible to report an identity without revealing the username.
Comment 1 Poul-Henning Kamp freebsd_committer freebsd_triage 2001-04-04 08:38:57 UTC
Responsible Changed
From-To: gnats-admin->freebsd-bugs

over to bugs
Comment 2 Poul-Henning Kamp freebsd_committer freebsd_triage 2001-04-04 08:38:57 UTC
Responsible Changed
From-To: gnats-admin->freebsd-bugs

over to bugs
Comment 3 Poul-Henning Kamp freebsd_committer freebsd_triage 2001-04-04 08:38:57 UTC
Responsible Changed
From-To: gnats-admin->freebsd-bugs

over to bugs
Comment 4 Poul-Henning Kamp freebsd_committer freebsd_triage 2001-04-04 08:38:57 UTC
Responsible Changed
From-To: gnats-admin->freebsd-bugs

over to bugs
Comment 5 Poul-Henning Kamp freebsd_committer freebsd_triage 2001-04-04 08:38:57 UTC
Responsible Changed
From-To: gnats-admin->freebsd-bugs

over to bugs
Comment 6 Poul-Henning Kamp freebsd_committer freebsd_triage 2001-04-04 08:38:57 UTC
Responsible Changed
From-To: gnats-admin->freebsd-bugs

over to bugs
Comment 7 Poul-Henning Kamp freebsd_committer freebsd_triage 2001-04-04 08:38:57 UTC
Responsible Changed
From-To: gnats-admin->freebsd-bugs

over to bugs
Comment 8 dwmalone freebsd_committer freebsd_triage 2001-04-04 10:23:54 UTC
Responsible Changed
From-To: freebsd-bugs->dwmalone

Inetd is my problem.
Comment 9 dwmalone freebsd_committer freebsd_triage 2001-07-17 11:45:21 UTC
State Changed
From-To: open->closed

Now in -current and -stable. Thanks for the patches.