This patch cleans up the ident stuff in inetd. The code which has been patched so many times it was a bit of a mess. There are style, code and man page cleanups. The following are the functional changes:

The RFC only permits the returning of 4 possible error
	codes, make sure we only return these (PR 27636).

	Use MAXLOGNAME to determine the longest usernames.

	Add a -i flag, which returns the uid instead of the username
	(this is from a PR 25787, which also contained alot of the
	cleanups in this patch).

PR:		25787, 27636
Partially Submitted by:	Arne.Dag.Fidjestol@idi.ntnu.no
Reviewed by:	Arne.Dag.Fidjestol@idi.ntnu.no, green
MFC after:	3 weeks

Former-commit-id: f1490dd77ab064700ae8281855f0a39151f6dfee